[gd_scene load_steps=19 format=2]

[ext_resource path="res://Objects/Item Box/Item Box2.png" type="Texture" id=1]
[ext_resource path="res://Objects/Traps/Slime/Slime4.png" type="Texture" id=2]
[ext_resource path="res://Objects/Item Box/ItemBox.gd" type="Script" id=3]
[ext_resource path="res://Objects/Traps/Boost/Boost2.png" type="Texture" id=4]
[ext_resource path="res://Objects/Traps/Sand/Sand4.png" type="Texture" id=5]
[ext_resource path="res://Objects/Traps/Fire/Fire3.png" type="Texture" id=6]
[ext_resource path="res://Objects/Traps/Oil/Oil4.png" type="Texture" id=7]
[ext_resource path="res://Objects/Traps/Golden Donut/Golden Donut1.png" type="Texture" id=8]
[ext_resource path="res://Objects/Traps/Ice/Ice4.png" type="Texture" id=9]
[ext_resource path="res://Objects/Item Box/Item Box3.png" type="Texture" id=10]
[ext_resource path="res://Objects/Item Box/Item Box1.png" type="Texture" id=11]
[ext_resource path="res://Audio/SoundManager2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/Item Box/Item Box5.png" type="Texture" id=13]
[ext_resource path="res://Objects/Item Box/Item Box6.png" type="Texture" id=14]
[ext_resource path="res://Objects/Item Box/Item Box4.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 18 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 6.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": false,
"name": "free",
"speed": 16.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": false,
"name": "spawn",
"speed": 16.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Default",
"speed": 8.0
} ]

[node name="Item Box" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 3 )

[node name="SoundManager2D" parent="." instance=ExtResource( 12 )]
max_distance = 256.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Background" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 2 )
playing = true

[node name="Trap" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 0, -12 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "Default"
frame = 5
playing = true

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Item_Box_body_entered"]
[connection signal="animation_finished" from="Background" to="." method="_on_Background_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
